--- a/PGManagerApi.csproj
+++ b/PGManagerApi.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
     <PackageReference Include="Lamar" Version="6.0.0" />
     <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.22" />
     <PackageReference Include="NHibernate" Version="5.3.10" />
     <PackageReference Include="Npgsql" Version="6.0.1" />
   </ItemGroup>
